<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/seconnecter"
    android:gravity="center"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    tools:context=".EcranAccueil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="195dp">

        <TextView
            android:id="@+id/phrase_accueil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/baloo"
            android:textColor="@color/darkgreen"
            android:textSize="20sp" />

        <RelativeLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_connection"
                style="@style/EditText.OutlinedBox"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/baloo"
                    android:textSize="17sp"
                    android:hint="@string/adresse_mail"
                    android:inputType="text"
                    android:textColor="@color/darkgreen"
                    android:textColorHint="#6B576A37"></com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mdp_connection"
                style="@style/EditText.OutlinedBox"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_below="@+id/email_connection"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/baloo"
                    android:textSize="17sp"
                    android:hint="@string/mot_de_passe"
                    android:inputType="textPassword"
                    android:textColor="@color/darkgreen"
                    android:textColorHint="#6B576A37"
                    app:passwordToggleEnabled="true">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/connection"
                style="@style/Widget.App.ShapeableButton"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_below="@+id/mdp_connection"
                android:fontFamily="@font/baloo"
                android:text="@string/se_connecter"
                android:textColor="@color/brightgreen"
                android:textSize="18sp"></Button>

            <Button
                android:id="@+id/inscription"
                style="@style/Widget.App.ShapeableButton"
                android:layout_width="400dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/connection"
                android:fontFamily="@font/baloo"
                android:text="@string/s_inscrire"
                android:textColor="@color/brightgreen"
                android:textSize="18sp"></Button>

            <TextView
                android:id="@+id/MDPoublie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inscription"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/mot_de_passe_e_mail_oubli"
                android:textColor="@color/darkgreen"
                android:textSize="15sp" />
            <!-- A faire fonctionner,
            et implmenter surtout pour l'affichage des trajets qui prend du temps -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="20dp"
                android:background="@drawable/green_circle_loading"
                android:elevation="8dp"
                android:visibility="visible">
                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"></ProgressBar>
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>